2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Track
	  ProjectDomService/Parser API.

2010-07-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Handled some
	  potential threading issues.-

2010-07-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Track API
	  changes.

2010-07-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Simplified
	  call.

2010-07-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: added null
	  check.

2010-07-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Disabled the
	  navigation bar subsystem - it got replaced by the pathed
	  document subsystem.

2010-06-24  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Fixed
	  'Bug 616949 - Message bubbles prevents the background color
	  of selected text to change'.

2010-06-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Fixed
	  'Bug 616001 - Inline errors don't completely vanish after
	  build'.

2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed 'Bug
	  613825 - Auto-complete on highlighted text overwrites
	  following characters'.

2010-06-15  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed
	  breakpoint text markers.

2010-06-10  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/SourceEditorView.cs:
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Fixed 'Bug
	  613114 - NRE in editor means error marker never goes away'.

2010-06-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.SourceEditor/MessageBubbleTextMarker.cs: Use a