@@ -1,3 +1,9 @@
+2010-07-13  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Replaced
+	  custom workerthread with
+	  system.compontentmodel.backgroundworker.
+
 2010-07-12  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.SourceEditor/ExtensibleTextEditor.cs: Track
